QQuickWidget: fix crash on exit

Make sure that the correct context is current when freeing GL resources.
Otherwise, on shutdown, QOpenGLVertexArrayObject would try to use the
previously current context, which mmay already have been deleted.

Task-number: QTBUG-37385
Change-Id: Ib2332f54636738a1a4b1041a7dcbffd0af00261d
Reviewed-by: Laszlo Agocs <laszlo.agocs@digia.com>

cregit: daff5656e2ffbec65db73cad3c0f997e6a1e7667 https://github.com/qt/qtbase/commit/daff5656e2ffbec65db73cad3c0f997e6a1e7667